Resolved ad overlapping issue over app content in Acitivities xml files

--- a/app/src/main/res/layout/file_view.xml
+++ b/app/src/main/res/layout/file_view.xml
@@ -38,5 +38,5 @@
         android:layout_alignParentRight="true"
         android:layout_below="@+id/TextView01"
         android:layout_marginLeft="5dip"
-        android:text="@+id/TextViewDate"></TextView>
+        android:text="@+id/TextViewDate"/>
 </RelativeLayout>
