--- a/app/src/main/res/layout/activity_expandablelayout.xml
+++ b/app/src/main/res/layout/activity_expandablelayout.xml
@@ -24,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/toolbarexpandable"
+            android:layout_above="@id/adView"
             android:paddingLeft="16dp" />
 
         <com.google.android.gms.ads.AdView
