--- a/app/src/main/res/layout/activity_explore_directory.xml
+++ b/app/src/main/res/layout/activity_explore_directory.xml
@@ -24,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/toolbarfile"
+            android:layout_above="@id/adView"
             android:layout_weight="1" />
 
         <com.google.android.gms.ads.AdView
