--- a/app/src/main/res/layout/activity_open_github_link.xml
+++ b/app/src/main/res/layout/activity_open_github_link.xml
@@ -21,6 +21,7 @@
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swipeContainer"
+            android:layout_above="@id/adView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/toolbarwebview"
@@ -60,7 +61,8 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/toolbarwebview"
-            android:paddingBottom="60dp"
+            android:layout_above="@id/adView"
+            android:paddingBottom="10dp"
             android:paddingRight="10dp"
             app:menu_colorNormal="@color/colorAccent"
             app:menu_colorPressed="#F2AB00"
