--- a/app/src/main/res/layout/activity_listitems.xml
+++ b/app/src/main/res/layout/activity_listitems.xml
@@ -18,7 +18,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:text="Medium Text"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textAllCaps="true"
+        android:textStyle="bold"
         android:textColor="#000" />
 
     <TextView
@@ -28,31 +29,23 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView2"
+        android:textStyle="italic"
         android:text="New Text"
         />
-
-<!--    <CheckBox
-        android:id="@+id/checkBox2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:focusable="false"
-        android:visibility="visible" />-->
     <com.like.LikeButton
         android:id="@+id/checkBox2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView3"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="15dp"
         android:layout_toLeftOf="@+id/textView3"
-        app:anim_scale_factor="2"
+        app:anim_scale_factor="1"
         app:circle_end_color="@color/colorAccent"
         app:circle_start_color="@color/colorPrimary"
         app:dots_primary_color="@color/colorAccent"
         app:dots_secondary_color="@color/colorPrimary"
-        app:icon_size="25dp"
+        app:icon_size="15dp"
         app:icon_type="Heart" />
 </RelativeLayout>
