--- a/app/src/main/res/layout/activity_open_github_link.xml
+++ b/app/src/main/res/layout/activity_open_github_link.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!-- This DrawerLayout has two children at the root  -->
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
@@ -12,14 +12,14 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
 
-        <android.support.v7.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbarwebview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
             app:layout_collapseMode="pin" />
 
-        <android.support.v4.widget.SwipeRefreshLayout
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipeContainer"
             android:layout_above="@id/adView"
             android:layout_width="match_parent"
@@ -40,7 +40,7 @@
                 android:scrollIndicators="top|left|bottom|start|end|right" />
 
 
-        </android.support.v4.widget.SwipeRefreshLayout>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -85,7 +85,7 @@
                 android:id="@+id/sharefab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/share_white_24x24"
+                android:src="@drawable/ic_share_github"
                 app:fab_colorNormal="#32CD32"
                 app:fab_label="Share"
                 app:fab_size="mini" />
@@ -115,7 +115,7 @@
     </RelativeLayout>
     <!-- The navigation drawer that comes from the left -->
     <!-- Note that `android:layout_gravity` needs to be set to 'start' -->
-    <android.support.design.widget.NavigationView
+    <com.google.android.material.navigation.NavigationView
         android:id="@+id/nvView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -124,4 +124,4 @@
         app:headerLayout="@layout/nav_header_navigation"
         app:itemTextColor="@android:color/holo_blue_dark"
         app:menu="@menu/activity_navigation_drawer" />
-</android.support.v4.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
