--- a/app/src/main/res/layout/list_item_genre.xml
+++ b/app/src/main/res/layout/list_item_genre.xml
@@ -18,6 +18,7 @@
         android:id="@+id/list_item_genre_name"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:textAllCaps="true"
         tools:text="Genre" />
 
     <ImageView
